{
  "version": 4,
  "terraform_version": "1.13.2",
  "serial": 93,
  "lineage": "745206b0-b616-eeb4-8162-efa03b40fbba",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:341056671376:loadbalancer/app/samsung-logistics-alb/0ce1885ac0c5458d",
            "arn_suffix": "app/samsung-logistics-alb/0ce1885ac0c5458d",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "samsung-logistics-alb-1856106909.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": true,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:341056671376:loadbalancer/app/samsung-logistics-alb/0ce1885ac0c5458d",
            "idle_timeout": 300,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "samsung-logistics-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-036b7e9f6a175de57"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02bcf66338191d9df"
              },
              {
                "subnet_id": "subnet-034197c9ee667bb38"
              }
            ],
            "subnets": [
              "subnet-02bcf66338191d9df",
              "subnet-034197c9ee667bb38"
            ],
            "tags": {
              "Name": "samsung-logistics-alb"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "samsung-logistics-alb",
              "Owner": "Samsung-CT",
              "Project": "HVDC-Logistics"
            },
            "vpc_id": "vpc-085562473b18c7ebd",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:341056671376:loadbalancer/app/samsung-logistics-alb/0ce1885ac0c5458d"
          },
          "dependencies": [
            "aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_fallback",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:341056671376:listener/app/samsung-logistics-alb/0ce1885ac0c5458d/42b62cc12f7c46fc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:341056671376:targetgroup/samsung-logistics-tg/f2d02d96e8f130b8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:341056671376:listener/app/samsung-logistics-alb/0ce1885ac0c5458d/42b62cc12f7c46fc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:341056671376:loadbalancer/app/samsung-logistics-alb/0ce1885ac0c5458d",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Owner": "Samsung-CT",
              "Project": "HVDC-Logistics"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:341056671376:listener/app/samsung-logistics-alb/0ce1885ac0c5458d/42b62cc12f7c46fc"
          },
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.ecs_tasks",
            "aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:341056671376:targetgroup/samsung-logistics-tg/f2d02d96e8f130b8",
            "arn_suffix": "targetgroup/samsung-logistics-tg/f2d02d96e8f130b8",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/healthz",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:341056671376:targetgroup/samsung-logistics-tg/f2d02d96e8f130b8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:341056671376:loadbalancer/app/samsung-logistics-alb/0ce1885ac0c5458d"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "samsung-logistics-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "samsung-logistics-tg"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "samsung-logistics-tg",
              "Owner": "Samsung-CT",
              "Project": "HVDC-Logistics"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-085562473b18c7ebd"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:341056671376:targetgroup/samsung-logistics-tg/f2d02d96e8f130b8"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:341056671376:security-group/sg-036b7e9f6a175de57",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-036b7e9f6a175de57",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from Internet (redirect to HTTPS)",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from Internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "samsung-logistics-alb-20250916195812092500000001",
            "name_prefix": "samsung-logistics-alb-",
            "owner_id": "341056671376",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "samsung-logistics-alb-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "samsung-logistics-alb-sg",
              "Owner": "Samsung-CT",
              "Project": "HVDC-Logistics"
            },
            "timeouts": null,
            "vpc_id": "vpc-085562473b18c7ebd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "341056671376",
            "id": "sg-036b7e9f6a175de57",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:341056671376:security-group/sg-0b203e6c90ada2b67",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b203e6c90ada2b67",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-036b7e9f6a175de57"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "samsung-logistics-ecs-20250916195817389600000002",
            "name_prefix": "samsung-logistics-ecs-",
            "owner_id": "341056671376",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "samsung-logistics-ecs-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "samsung-logistics-ecs-sg",
              "Owner": "Samsung-CT",
              "Project": "HVDC-Logistics"
            },
            "timeouts": null,
            "vpc_id": "vpc-085562473b18c7ebd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "341056671376",
            "id": "sg-0b203e6c90ada2b67",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb"
          ]
        }
      ]
    }
  ]
}